--- a/questions.ipynb
+++ b/questions.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,14 +27,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collections:  ['restaurants', 'airbnb']\n"
+     ]
+    }
+   ],
    "source": [
     "import pymongo\n",
     "import pandas as pd\n",
     "\n",
-    "URI = 'MONGO CONNEXTION STRING TO REPLACE'\n",
+    "URI = 'mongodb+srv://mongo_user:r6WwvMjGutBaKtXf@cluster-but-sd.jqzow.mongodb.net/?retryWrites=true&w=majority&appName=cluster-but-sd'\n",
     "client = pymongo.MongoClient(URI)\n",
     "db = client.tp\n",
     "\n",
@@ -51,10 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5555\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre_logements = db.airbnb.count_documents({})\n",
+    "print(nombre_logements)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,10 +84,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      _id                           prix_moyen\n",
+      "0               Hong Kong  762.4781906300484652665589660743134\n",
+      "1          Rio De Janeiro  525.8059701492537313432835820895522\n",
+      "2   Other (International)                               445.75\n",
+      "3                Istanbul  367.9454545454545454545454545454545\n",
+      "4                   Kauai  288.8208955223880597014925373134328\n",
+      "5                    Maui  286.5882352941176470588235294117647\n",
+      "6                    Oahu  212.2964426877470355731225296442688\n",
+      "7                  Sydney  197.7142857142857142857142857142857\n",
+      "8          The Big Island  179.4604316546762589928057553956835\n",
+      "9                New York  139.6260296540362438220757825370675\n",
+      "10       Other (Domestic)                               128.00\n",
+      "11                                                      115.50\n",
+      "12              Barcelona  100.9477848101265822784810126582278\n",
+      "13               Montreal  100.2330246913580246913580246913580\n",
+      "14                  Porto  69.12815884476534296028880866425993\n"
+     ]
+    }
+   ],
+   "source": [
+    "ville_prix = [\n",
+    "    {\"$group\": {\"_id\": \"$address.market\", \"prix_moyen\": {\"$avg\": \"$price\"}}},\n",
+    "    {\"$sort\": {\"prix_moyen\": -1}}\n",
+    "]\n",
+    "prix_moyen_ville = list(db.airbnb.aggregate(ville_prix))\n",
+    "print(pd.DataFrame(prix_moyen_ville))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,10 +128,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '24-hour check-in', 'Accessible-height bed', 'Accessible-height toilet', 'Air conditioning', 'Air purifier', 'Alfresco shower', 'BBQ grill', 'Baby bath', 'Baby monitor', 'Babysitter recommendations', 'Balcony', 'Bath towel', 'Bathroom essentials', 'Bathtub', 'Bathtub with bath chair', 'Beach chairs', 'Beach essentials', 'Beach view', 'Beachfront', 'Bed linens', 'Bedroom comforts', 'Bicycle', 'Bidet', 'Body soap', 'Boogie boards', 'Breakfast', 'Breakfast bar', 'Breakfast table', 'Building staff', 'Buzzer/wireless intercom', 'Cable TV', 'Carbon monoxide detector', 'Cat(s)', 'Ceiling fan', 'Central air conditioning', 'Changing table', \"Chef's kitchen\", 'Children’s books and toys', 'Children’s dinnerware', 'Cleaning before checkout', 'Coffee maker', 'Convection oven', 'Cooking basics', 'Crib', 'DVD player', 'Day bed', 'Dining area', 'Disabled parking spot', 'Dishes and silverware', 'Dishwasher', 'Dog(s)', 'Doorman', 'Double oven', 'Dryer', 'EV charger', 'Electric profiling bed', 'Elevator', 'En suite bathroom', 'Espresso machine', 'Essentials', 'Ethernet connection', 'Extra pillows and blankets', 'Family/kid friendly', 'Fax machine', 'Fire extinguisher', 'Fireplace guards', 'Firm mattress', 'First aid kit', 'Fixed grab bars for shower', 'Fixed grab bars for toilet', 'Flat path to front door', 'Formal dining area', 'Free parking on premises', 'Free street parking', 'Full kitchen', 'Game console', 'Garden or backyard', 'Gas oven', 'Ground floor access', 'Gym', 'Hair dryer', 'Handheld shower head', 'Hangers', 'Heated towel rack', 'Heating', 'High chair', 'Home theater', 'Host greets you', 'Hot tub', 'Hot water', 'Hot water kettle', 'Ice Machine', 'Indoor fireplace', 'Internet', 'Iron', 'Ironing Board', 'Kayak', 'Keypad', 'Kitchen', 'Kitchenette', 'Lake access', 'Laptop friendly workspace', 'Lock on bedroom door', 'Lockbox', 'Long term stays allowed', 'Luggage dropoff allowed', 'Memory foam mattress', 'Microwave', 'Mini fridge', 'Mountain view', 'Murphy bed', 'Netflix', 'Other', 'Other pet(s)', 'Outdoor parking', 'Outdoor seating', 'Outlet covers', 'Oven', 'Pack ’n Play/travel crib', 'Paid parking off premises', 'Paid parking on premises', 'Parking', 'Patio or balcony', 'Permit parking', 'Pets allowed', 'Pets live on this property', 'Pillow-top mattress', 'Pocket wifi', 'Pool', 'Pool with pool hoist', 'Private bathroom', 'Private entrance', 'Private hot tub', 'Private living room', 'Private pool', 'Rain shower', 'Refrigerator', 'Roll-in shower', 'Room-darkening shades', 'Safe', 'Safety card', 'Sauna', 'Self check-in', 'Shampoo', 'Shared pool', 'Shower chair', 'Single level home', 'Ski-in/Ski-out', 'Smart TV', 'Smart lock', 'Smoke detector', 'Smoking allowed', 'Snorkeling equipment', 'Sonos sound system', 'Sound system', 'Stair gates', 'Standing valet', 'Step-free access', 'Stove', 'Suitable for events', 'Sun loungers', 'Swimming pool', 'TV', 'Table corner guards', 'Tennis court', 'Terrace', 'Toaster', 'Toilet paper', 'Walk-in shower', 'Warming drawer', 'Washer', 'Washer / Dryer', 'Waterfront', 'Well-lit path to entrance', 'Wheelchair accessible', 'Wide clearance to bed', 'Wide clearance to shower', 'Wide doorway', 'Wide entryway', 'Wide hallway clearance', 'Wifi', 'Window guards', 'toilet', 'translation missing: en.hosting_amenity_49', 'translation missing: en.hosting_amenity_50']\n"
+     ]
+    }
+   ],
+   "source": [
+    "equipements_amenities = db.airbnb.distinct(\"amenities\")\n",
+    "print(equipements_amenities)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +153,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5303\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre_wifi = db.airbnb.count_documents({\n",
+    "    \"amenities\": { \"$in\": [\"Wifi\"] }\n",
+    "})\n",
+    "print(nombre_wifi)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,10 +180,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>beds</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Apt Linda Vista Lagoa - Rio</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ótimo Apto proximo Parque Olimpico</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Modern Spacious 1 Bedroom Loft</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ligne verte - à 15 min de métro du centre ville.</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ribeira Charming Duplex</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5550</th>\n",
+       "      <td>Estudio en el casco antiguo. Alquiler mensual</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5551</th>\n",
+       "      <td>Qto Aconchegante no em frente ao Parque Olímpico</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5552</th>\n",
+       "      <td>StayIN Oporto Música - Apartment</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5553</th>\n",
+       "      <td>Quarto Legal</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5554</th>\n",
+       "      <td></td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5555 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  name  bedrooms  beds\n",
+       "0                          Apt Linda Vista Lagoa - Rio       1.0   1.0\n",
+       "1                   Ótimo Apto proximo Parque Olimpico       2.0   2.0\n",
+       "2                       Modern Spacious 1 Bedroom Loft       1.0   2.0\n",
+       "3     Ligne verte - à 15 min de métro du centre ville.       0.0   1.0\n",
+       "4                              Ribeira Charming Duplex       3.0   5.0\n",
+       "...                                                ...       ...   ...\n",
+       "5550     Estudio en el casco antiguo. Alquiler mensual       0.0   3.0\n",
+       "5551  Qto Aconchegante no em frente ao Parque Olímpico       1.0   1.0\n",
+       "5552                  StayIN Oporto Música - Apartment       8.0   8.0\n",
+       "5553                                      Quarto Legal       1.0   1.0\n",
+       "5554                                                         1.0   1.0\n",
+       "\n",
+       "[5555 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logements_chambres_lits = db.airbnb.find({},\n",
+    "    { \"_id\": 0, \"name\": 1, \"bedrooms\": 1, \"beds\": 1 }\n",
+    ")\n",
+    "pd.DataFrame(list(logements_chambres_lits))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,10 +319,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ribeira Charming Duplex</td>\n",
+       "      <td>80.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Be Happy in Porto</td>\n",
+       "      <td>30.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Downtown Oporto Inn (room cleaning)</td>\n",
+       "      <td>40.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FloresRooms 3T</td>\n",
+       "      <td>31.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A Casa Alegre é um apartamento T1.</td>\n",
+       "      <td>40.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>549</th>\n",
+       "      <td>Number283 - Your home abroad</td>\n",
+       "      <td>48.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>550</th>\n",
+       "      <td>Cozy apartment downtown Porto</td>\n",
+       "      <td>58.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>551</th>\n",
+       "      <td>Soares Guest House</td>\n",
+       "      <td>90.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552</th>\n",
+       "      <td>Central, Modern, University, Metro</td>\n",
+       "      <td>41.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>553</th>\n",
+       "      <td>StayIN Oporto Música - Apartment</td>\n",
+       "      <td>500.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>554 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    name   price\n",
+       "0                Ribeira Charming Duplex   80.00\n",
+       "1                      Be Happy in Porto   30.00\n",
+       "2    Downtown Oporto Inn (room cleaning)   40.00\n",
+       "3                         FloresRooms 3T   31.00\n",
+       "4     A Casa Alegre é um apartamento T1.   40.00\n",
+       "..                                   ...     ...\n",
+       "549         Number283 - Your home abroad   48.00\n",
+       "550        Cozy apartment downtown Porto   58.00\n",
+       "551                   Soares Guest House   90.00\n",
+       "552   Central, Modern, University, Metro   41.00\n",
+       "553     StayIN Oporto Música - Apartment  500.00\n",
+       "\n",
+       "[554 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logements_chambres_lits = db.airbnb.find(\n",
+    "    { \"address.market\": { \"$in\": [ \"Porto\" ] }},\n",
+    "    { \"_id\": 0, \"name\": 1, \"price\": 1 }\n",
+    ")\n",
+    "pd.DataFrame(list(logements_chambres_lits))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,7 +539,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -241,9 +553,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
