--- a/questions.ipynb
+++ b/questions.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,12 +54,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Combien de logements sont la base de données ?"
+    "#1. Combien de logements sont la base de données ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,6 +73,15 @@
    "source": [
     "nombre_logements = db.airbnb.count_documents({})\n",
     "print(nombre_logements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Il y a 5555 logements enregistrés dans la base de données."
    ]
   },
   {
@@ -120,6 +129,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Voici le prix moyen des logements pour chaque ville, trié par ordre décroissant, avec Hong Kong en tête à 762,47 €."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -142,6 +160,15 @@
    "source": [
     "equipements_amenities = db.airbnb.distinct(\"amenities\")\n",
     "print(equipements_amenities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Les logements proposent une large gamme d'équipements, comme la climatisation, un WiFi, un parking gratuit, et bien d'autres."
    ]
   },
   {
@@ -169,6 +196,15 @@
     "    \"amenities\": { \"$in\": [\"Wifi\"] }\n",
     "})\n",
     "print(nombre_wifi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Il y a 5303 propriétés qui proposent le WiFi parmi leurs équipements."
    ]
   },
   {
@@ -311,6 +347,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Voici Chaque logement est répertorié. par exemple on a l'appartement Apt Linda Vista Lagoa - Rio qui comporte 1 chambre et un lit."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -439,6 +484,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Les logements situés à Porto et leur prix respectif sont listés, par exemple l'appartement Ribeira Charming Duplex coute 80€."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -447,10 +501,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                 _id  total_commentaire\n",
+      "0                    #Private Studio - Waikiki Dream                533\n",
+      "1  Near Airport private room, 2 bedroom granny fl...                469\n",
+      "2           La Sagrada Familia (and metro) 4 blocks!                463\n",
+      "3                PRIVATE Room in Spacious, Quiet Apt                420\n",
+      "4                      traditional and Charming room                408\n"
+     ]
+    }
+   ],
+   "source": [
+    "commentaire = [\n",
+    "    {\"$unwind\": \"$reviews\"},\n",
+    "    {\"$group\": {\"_id\": \"$name\", \"total_commentaire\": {\"$sum\": 1}}},\n",
+    "    {\"$sort\": {\"total_commentaire\": -1}},\n",
+    "    {\"$limit\": 5}\n",
+    "]\n",
+    "total_commentaire = list(db.airbnb.aggregate(commentaire))\n",
+    "print(pd.DataFrame(total_commentaire))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Les 5 hôtes les plus populaires sont ceux ayant reçu le plus de commentaires, avec le logement \"#Private Studio - Waikiki Dream\" en tête avec 533 commentaires."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -461,10 +546,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         _id  nombre_logements\n",
+      "0   Istanbul               660\n",
+      "1   Montreal               648\n",
+      "2  Barcelona               632\n",
+      "3  Hong Kong               619\n",
+      "4     Sydney               609\n",
+      "5   New York               607\n"
+     ]
+    }
+   ],
+   "source": [
+    "logements = [\n",
+    "    {\"$group\": {\"_id\": \"$address.market\", \"nombre_logements\": {\"$sum\": 1}}},\n",
+    "    {\"$sort\": {\"nombre_logements\": -1}},\n",
+    "    {\"$limit\": 6}\n",
+    "]\n",
+    "top_5_logements = list(db.airbnb.aggregate(logements))\n",
+    "print(pd.DataFrame(top_5_logements))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Les villes avec le plus de logements disponibles sont Istanbul, Montréal, Barcelone, Hong Kong, Sydney, et New York."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -475,10 +591,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   nombre_de_logements\n",
+      "0                  451\n"
+     ]
+    }
+   ],
+   "source": [
+    "logements = [\n",
+    "    {\"$match\": {\"accommodates\": {\"$gt\": 4}, \"security_deposit\": {\"$lt\": 300}}},\n",
+    "    {\"$count\": \"nombre_de_logements\"},\n",
+    "    {\"$limit\": 6}\n",
+    "]\n",
+    "logements_4_invite = list(db.airbnb.aggregate(logements))\n",
+    "print(pd.DataFrame(logements_4_invite))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Il y a 451 propriétés qui acceptent plus de 4 invités avec une caution inférieure à 300 €."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -489,16 +631,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   reviewer_id reviewer_name\n",
+      "0     20055445     Volodymyr\n",
+      "1     20262783       Adriana\n",
+      "2    185337030        Sandra\n",
+      "3      8042435          Adam\n",
+      "4      2405802        Monica\n",
+      "5     26343225          Lola\n",
+      "6     21705356      Carolina\n",
+      "7     28609339       Sheldon\n",
+      "8     27368066       Michael\n",
+      "9     25711273          Ross\n",
+      "10    46641199       Pauline\n",
+      "11    36070007      Corentin\n",
+      "12    20270629          Mich\n",
+      "13    26769340           Arm\n",
+      "14    63441276         Caoye\n",
+      "15    10642927           Deb\n",
+      "16    49308579       Tiffany\n",
+      "17    12607902       Tatyana\n",
+      "18   132431719        Martin\n",
+      "19    49736217          Hanh\n"
+     ]
+    }
+   ],
    "source": [
-    "11. Parmi les logements à Sydney, quel est la note moyenne des visiteurs ?"
+    "commentaire = [\n",
+    "    {\"$unwind\": \"$reviews\"},\n",
+    "    {\"$group\": {\"_id\": {\"reviewer_id\": \"$reviews.reviewer_id\", \"reviewer_name\": \"$reviews.reviewer_name\" }}}, \n",
+    "    {\"$sort\": {\"nombre_commentaire\": -1}},\n",
+    "    {\"$limit\": 20},\n",
+    "    {\"$project\": {  \"_id\": 0,\"reviewer_id\": \"$_id.reviewer_id\",\"reviewer_name\": \"$_id.reviewer_name\"}}\n",
+    "]\n",
+    "total_commentaire = list(db.airbnb.aggregate(commentaire))\n",
+    "print(pd.DataFrame(total_commentaire))"
    ]
   },
   {
@@ -506,13 +679,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Voici la liste des 20 utilisateurs les plus actifs, affichant leur identifiant et leur nom, comme Volodymyr et Adriana."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "12. (bonus) Afficher les logements qui contiennent le mot \"park\" dans leur nom"
+    "#11. Parmi les logements à Sydney, quel est la note moyenne des visiteurs ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   note_moyenne_sydney\n",
+      "0             93.45567\n"
+     ]
+    }
+   ],
+   "source": [
+    "Note = [\n",
+    "    {\"$match\": {\"address.market\": \"Sydney\"}},\n",
+    "    {\"$group\": {\"_id\": 0, \"note_moyenne_sydney\": {\"$avg\": \"$review_scores.review_scores_rating\"}}},\n",
+    "    {\"$project\": {  \"_id\": 0,\"note_moyenne_sydney\" : 1}}\n",
+    "]\n",
+    "Note_Sydney = list(db.airbnb.aggregate(Note))\n",
+    "print(pd.DataFrame(Note_Sydney))"
    ]
   },
   {
@@ -520,7 +719,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "La note moyenne des visiteurs pour les logements situés à Sydney est de 93,46."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#12. (bonus) Afficher les logements qui contiennent le mot \"park\" dans leur nom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                  name\n",
+      "0    Sydney Hyde Park City Apartment (checkin from ...\n",
+      "1                     UWS Brownstone Near Central Park\n",
+      "2                     Triple room Barcelona Guell park\n",
+      "3                    Park Guell apartment with terrace\n",
+      "4    aOceanside Hawaii Apartment Studio Kitchen Par...\n",
+      "..                                                 ...\n",
+      "161                 Park Slope Private Bed+Livingroom!\n",
+      "162                    Waikiki Condo with Free Parking\n",
+      "163  Sydney Studio in Glebe Close to CBD. SparklinC...\n",
+      "164  1921 15kms from Sydney CBD with Pool Spa parking.\n",
+      "165                  Big 2bdm, Views, WIFI and carpark\n",
+      "\n",
+      "[166 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nom_park = db.airbnb.aggregate([\n",
+    "    {\"$match\": {\"name\": {\"$regex\": \"park\", \"$options\": \"i\"}}},  \n",
+    "    {\"$project\": {\"_id\": 0, \"name\": 1}}  \n",
+    "])\n",
+    "\n",
+    "print(pd.DataFrame(list(nom_park)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Voici une liste de tous les logements dont le nom contient le mot \"park\", comme \"Sydney Hyde Park City Apartment\"."
+   ]
   },
   {
    "cell_type": "markdown",
